# terraform-hs

./: .gitignore  LICENSE  README.md  stack.yaml  terraform-hs.cabal
examples/: tf-example.hs
scripts/: generate.hs
src/Language/Terraform/: Aws.hs  Core.hs
src/Language/Terraform/Util/: Text.hs
